<resources>
    <string name="app_name">视频通话</string>
    <string name="app_copyright">Copyright © 2017 Wilddog. All Rights Reserved</string>
    <string name="logo_des">野狗通信云</string>
    <string name="app_des">野狗视频通话</string>
    <string name="login">微信登录</string>
    <string name="online">在线</string>
    <string name="call">好友</string>
    <string name="me">我</string>
    <string name="personnal_settings">我</string>
    <string name="user_id">用户ID</string>
    <string name="dimension">清晰度</string>
    <string name="beauty_plan">美颜方案</string>
    <string name="record_file">录制文件</string>
    <string name="SDK_version">SDK版本</string>
    <string name="cancel">取消</string>
    <string name="dimension_1080P">1080P</string>
    <string name="dimension_720P">720P</string>
    <string name="dimension_480P">480P</string>
    <string name="dimension_360P">360P</string>
    <string name="dimension_240P">240P</string>
    <string name="dimension_120P">120P</string>
    <string name="change_dimension">切换清晰度</string>
    <string name="change_beauty_plan">切换美颜方案</string>
    <string name="beauty_plan_Camera360">Camera360</string>
    <string name="beauty_plan_TuSDK">TuSDK</string>
    <string name="change_beauty_nothing">不使用美颜</string>
    <string name="delete">删除</string>
    <string name="online_now">当前在线</string>
    <string name="camera360_sdk_version">Camera360 SDK v1.7</string>
    <string name="call_history">好友列表</string>
    <string name="about">关于</string>
    <string name="join_room">加入多人房间</string>
    <string name="detailinfo">详细资料</string>
    <string name="blacklist">加入黑名单</string>
    <string name="report">举报</string>
    <string name="videocall">视频通话</string>
    <string name="dec_blacklist">加入黑名单，你将无法与对方进行视频通话</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="submmit">提交</string>
    <string name="reported">被举报人</string>
    <string name="report_dsc">举报说明</string>
    <string name="count">还可以输入200个字</string>
    <string name="blackusers">黑名单</string>
    <string name="write_room_id">请填写房间号</string>
    <string name="choose_model">选择模式</string>
    <string name="join">加入</string>
    <string name="invite_other">邀请他人</string>
    <string name="roomId">房间号:</string>
    <string name="copy_roomId">复制房间号</string>
    <string name="copy_room_url">复制房间地址</string>
</resources>
