<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popwin_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/text_color_white"
        android:orientation="vertical">

        <TextView
            style="@style/DialogItemStyle"
            android:layout_width="match_parent"
            android:text="@string/dec_blacklist" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/add_blacklist"
            style="@style/DialogItemStyle_child"
            android:layout_width="match_parent"
            android:text="@string/add_blacklist" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/line_color" />
        <TextView
            android:id="@+id/tv_cancel"
            style="@style/DialogItemStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>