<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_parent"
    android:background="@color/background"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/titleColor"
    android:text="@string/personnal_settings"
    android:textColor="@color/itemBackground"
    android:layout_gravity="center"
    android:gravity="center"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/ItemStyle"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user_id"
        android:maxEms="10"
        android:text="564521351456"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center|right"
        android:layout_marginLeft="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="复制"
        android:id="@+id/btn_copy"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/ItemStyle"
        android:id="@+id/ll_dimension"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimension"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dimension"
            android:layout_weight="1"
            android:text="360"
            android:gravity="center|right"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_up_float"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/ItemStyle"
        android:id="@+id/ll_beauty_plan"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty_plan"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_beauty_plan"
            android:layout_weight="1"
            android:text="Camera360"
            android:gravity="center|right"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_up_float"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/ItemStyle"
        android:id="@+id/ll_record_file"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_file"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_record_file"
            android:layout_weight="1"
            android:text=""
            android:gravity="center|right"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_up_float"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/ItemStyle"
        android:id="@+id/ll_SDK_version"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SDK_version"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sdk_version"
            android:layout_weight="1"
            android:text=""
            android:gravity="center|right"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_up_float"
            />
    </LinearLayout>


</LinearLayout>