<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wilddog.conversation.activities.JoinRoomActivity">
    <RelativeLayout
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:background="@color/title_color"
        android:id="@+id/rl_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.3dp"
            android:padding="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/join_room"
            android:textColor="@color/item_background"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_join_room_id"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:gravity="center"
        android:textColorHint="@color/text_color_hint"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:background="@null"
        android:hint="@string/write_room_id" />
    <ImageView
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/edit_uid"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="@string/choose_model"
        android:textColor="@color/text_color_666666"
        android:textSize="17sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/rg_choose_mode"
        android:orientation="vertical"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:button="@null"
            android:id="@+id/rb_interact"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_radiobutton_room_interact_bg"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:button="@null"
            android:id="@+id/rb_video"
            android:background="@drawable/selector_radiobutton_room_video_bg"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="231dp"
        android:layout_height="39dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="43dp"
        android:background="@drawable/selector_button_login"
        android:gravity="center"
        android:text="@string/join"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/button_text_size" />
</LinearLayout>
